# Tabulify_PDF

./: .bandit  .dockerignore  .gitignore  .gitlab-ci.yml  .gitleaksignore  CI-CD-DOCUMENTATION.md  DEPLOYMENT-FIX-SUMMARY.md  Dockerfile  GCP deployment.md  GITLAB_CICD_SETUP.md  LICENSE  README.md  TESTING.md  app.py  custom-domain-setup.md  kubernetes-backendconfig.yaml  kubernetes-deployment.yaml  kubernetes-hpa.yaml  kubernetes-ingress.yaml  main.py  old.txt  pyproject.toml  pytest.ini  requirements.txt  run_tests.py
.github/workflows/: test.yml
.streamlit/: config.toml
ai_powered_pdf_table_extractor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
modules/: llm.py  pdf_extraction.py  utils.py
src/: llm.py  main.py  pdf_extraction.py
tests/: README.md  __init__.py  conftest.py  test_app.py  test_integration.py  test_llm.py  test_main.py  test_output_functions.py  test_pdf_extraction.py
