[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-powered-pdf-table-extractor"
version = "1.0.0"
description = "A powerful tool that uses AI models to extract tabular data from PDF documents"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Derrick Owusu Ofori", email = "mrderrick.of@gmail.com"}
]
maintainers = [
    {name = "Derrick Owusu Ofori", email = "mrderrick.of@gmail.com"}
]
keywords = [
    "pdf",
    "table-extraction",
    "ai",
    "openai",
    "data-extraction",
    "ocr",
    "document-processing",
    "streamlit"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Office/Business",
    "Topic :: Text Processing",
]

dependencies = [
    "openai>=1.61.0",
    "streamlit>=1.41.1",
    "PyMuPDF>=1.25.2",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "Pillow>=11.1.0",
    "numpy>=1.26.4",
    "openpyxl>=3.1.5",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
    "aiohttp>=3.11.12",
    "pyahocorasick>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/Derrick015/AI_Powered_PDF_Table_Extractor"
Repository = "https://github.com/Derrick015/AI_Powered_PDF_Table_Extractor"
Issues = "https://github.com/Derrick015/PDF_Table_Extractor_AI/issues"

[project.scripts]
pdf-table-extractor = "src.main:main"

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | __pycache__
)/
'''

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

